# perchdesk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_buildings.py  0003_office_time_unit_hourly.py  0004_library_duration_480.py  0005_add_building_coordinates.py  0006_add_favorites.py  0007_add_space_visits.py
backend/app/: main.py
backend/app/api/v1/: auth.py  bookings.py  buildings.py  favorites.py  router.py  seats.py  space_visits.py  spaces.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  geo.py  security.py  seed.py
backend/app/models/: __init__.py  booking.py  building.py  favorite.py  seat.py  space.py  space_rules.py  space_visit.py  user.py
backend/app/scheduler/: jobs.py
backend/app/schemas/: auth.py  booking.py  building.py  favorite.py  seat.py  space.py  space_rules.py  space_visit.py
backend/app/services/: auth.py  booking.py  building.py  favorite.py  seat.py  space.py  space_rules.py  space_visit.py
backend/tests/: conftest.py  test_geo.py  test_health.py  test_services.py
backend/tests/api/: test_auth.py  test_bookings.py  test_buildings.py  test_exceptions.py  test_favorites.py  test_seats.py  test_space_visits.py  test_spaces.py
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: architecture.md  booking_ux_decisions.md  booking_ux_open_questions.md  dev-defects.md  p1_make_up_list.md  tasks.md  time-semantics.md  wireframe.md
(+94 files in other folders)
